--- a/app/src/main/res/layout/group_list_id.xml
+++ b/app/src/main/res/layout/group_list_id.xml
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ID"
+            android:text="@string/id_header_label"
             android:padding="12dp"
             android:textSize="16sp"
             android:textColor="#333333"
@@ -40,7 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="Name"
+            android:text="@string/name_header_label"
             android:padding="12dp"
             android:textSize="16sp"
             android:textColor="#333333"
